--- a/scripts/Assessment.css
+++ b/scripts/Assessment.css
@@ -18,19 +18,19 @@ body {
 }
 /*form styles*/
 #msform {
-	width: 400px;
+	width: 500px;
 	margin: 50px auto;
-	text-align: center;
+	
 	position: relative;
 }
 #msform fieldset {
 	background: white;
 	border: 0 none;
-	border-radius: 3px;
+	border-radius: 30px;
 	box-shadow: 0 0 15px 1px rgba(0, 0, 0, 0.4);
 	padding: 20px 30px;
 	box-sizing: border-box;
-	width: 80%;
+	width: 90%;
 	margin: 0 10%;
 	
 	/*stacking fieldsets above each other*/
@@ -40,7 +40,12 @@ body {
 #msform fieldset:not(:first-of-type) {
 	display: none;
 }
-/*inputs*/
+/*
+
+
+
+
+inputs*/
 #msform input, #msform textarea {
 	padding: 15px;
 	border: 1px solid #ccc;
@@ -59,7 +64,7 @@ body {
 	font-weight: bold;
 	color: white;
 	border: 0 none;
-	border-radius: 1px;
+	border-radius: 10px;
 	cursor: pointer;
 	padding: 10px 5px;
 	margin: 10px 5px;
@@ -82,7 +87,7 @@ body {
 }
 /*progressbar*/
 #progressbar {
-	margin-bottom: 30px;
+	margin-bottom: -100px;
 	overflow: hidden;
 	/*CSS counters to number the steps*/
 	counter-reset: step;
@@ -91,8 +96,8 @@ body {
 	list-style-type: none;
 	color: white;
 	text-transform: uppercase;
-	font-size: 9px;
-	width: 33.33%;
+	font-size: 10px;
+	width: 10%;
 	float: left;
 	position: relative;
 }
@@ -102,7 +107,7 @@ body {
 	width: 20px;
 	line-height: 20px;
 	display: block;
-	font-size: 10px;
+	font-size: 0px;font-position:0%;
 	color: #333;
 	background: white;
 	border-radius: 3px;
@@ -130,5 +135,19 @@ body {
 	color: white;
 }
 
+.checkbox {
+   padding-left: 50px;
+   font-weight: bold;
+ }
 
-
+#msform .action-checkbox {
+	width: 100px;
+	background: #27AE60;
+	font-weight: bold;
+	color: white;
+	border: 0 none;
+	border-radius: 10px;
+	cursor: pointer;
+	padding: 10px 5px;
+	margin: 5px 40px;
+}
