--- a/scripts/manage.css
+++ b/scripts/manage.css
@@ -1,48 +1,56 @@
+*, *:before, *:after {
+  box-sizing: border-box;
+}
 
- .body{
-  padding-top: 500px;
+.wrapper, .quick-create-event,
+.import-events {
+  zoom: 1;
+}
+.wrapper:after, .quick-create-event:after,
+.import-events:after, .wrapper:before, .quick-create-event:before,
+.import-events:before {
+  content: "";
+  display: table;
+}
+.wrapper:after, .quick-create-event:after,
+.import-events:after {
+  clear: both;
+}
 
- }
 .wrapper {
-
   display: table;
   width: 80%;
   height: auto;
   margin: 50px auto;
   border: 1px solid #ccc;
-  @extend %clearfix;
-  
-  input[type="text"] {
-    height: 35px;
-    padding: 0 5px;
-    border: 1px solid #ccc;
-  }
 }
-
-
-
+.wrapper input[type="text"] {
+  height: 35px;
+  padding: 0 5px;
+  border: 1px solid #ccc;
+}
 
 .quick-create-event,
 .import-events {
   display: table-cell;
   height: 100%;
-  @extend %clearfix;
   padding: 20px;
-
 }
 
 .quick-create-event {
-  width: percentage(3/4);
+  width: 75%;
   border-right: 1px solid #ccc;
-  
-  button { width: percentage(1/3); }
+}
+.quick-create-event button {
+  width: 33.33333%;
 }
 
 .import-events {
-  width: percentage(1/4);
+  width: 25%;
   background: #eee;
-  
-   button { width: 100%; }
+}
+.import-events > button {
+  width: 100%;
 }
 
 h5 {
@@ -53,40 +61,41 @@ h5 {
 }
 
 .event-name {
-  width: percentage(1/3);
+  width: 33.33333%;
   float: left;
   padding-right: 20px;
   margin-bottom: 20px;
-  
-  input { width: 100%; }
+}
+.event-name input {
+  width: 100%;
 }
 
 .datepicker {
-  width: percentage(2/3);
+  width: 66.66667%;
   float: left;
   margin-bottom: 20px;
-  
-  input {
-    width: 45%;
-    float: left;
-  }
-  
-  .datepicker-dash {
-    width: 10%;
-    float: left;
-    text-align: center;
-    height: 30px;
-    line-height: 32px;
-  }
+}
+.datepicker input {
+  width: 45%;
+  float: left;
+}
+.datepicker .datepicker-dash {
+  width: 10%;
+  float: left;
+  text-align: center;
+  height: 30px;
+  line-height: 32px;
 }
 
 .event-type,
 .event-template {
-  width: percentage(1/3);
+  width: 50%;
   float: left;
-  padding-right: 20px;
-  
-  input { width: 100%; }
+  padding-right: 50px;
+}
+.event-type input,
+.event-template input {
+  width: 100%;
 }
 
 button {
@@ -99,23 +108,22 @@ button {
 
 .choose-file {
   position: relative;
-  width: 100%;
-  float: left;
+  width: 50%;
+  float: right;
   margin-bottom: 20px;
-  
-  input { 
-    width: 100%; 
-    padding-right: 50px;
-  }
-  
-  button {
-    position: absolute;
-    top: 0;
-    right: 0;
-    width: 35px;
-    height: 35px;
-    padding: 0;
-    
-    svg { fill: #fff; }
-  }
+}
+.choose-file input {
+  width: 100%;
+  padding-right: 50px;
+}
+.choose-file button {
+  position: absolute;
+  top: 0;
+  right: 0;
+  width: 35px;
+  height: 35px;
+  padding: 0;
+}
+.choose-file button svg {
+  fill: #fff;
 }
