--- a/scripts/manage.css
+++ b/scripts/manage.css
@@ -1,47 +1,62 @@
 *, *:before, *:after {
   box-sizing: border-box;
 }
+body {
+  
+  background-image: url("../dist/img/manage.jpg") ;
 
-.wrapper, .quick-create-event,
-.import-events {
-  zoom: 1;
+
+    height: auto; 
+     margin: auto;
+
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+  
+  
 }
-.wrapper:after, .quick-create-event:after,
-.import-events:after, .wrapper:before, .quick-create-event:before,
-.import-events:before {
-  content: "";
-  display: table;
-}
-.wrapper:after, .quick-create-event:after,
-.import-events:after {
-  clear: both;
-}
+
+
+
 
 .wrapper {
-  display: table;
-  width: 80%;
-  height: auto;
+  display: block;
+  width: 70%;
+  height: 200px;
   margin: 50px auto;
   border: 1px solid #ccc;
+  zoom: 0.90;
+  padding: 20px;
+
+  margin: 15em 10em 10em 15em;
+  background-color: rgba(111,111,111,0.5);
+
 }
 .wrapper input[type="text"] {
+
   height: 35px;
-  padding: 0 5px;
-  border: 1px solid #ccc;
+  padding: 15px;
+  border: 3px solid #ccc; 
 }
 
 .quick-create-event,
 .import-events {
-  display: table-cell;
-  height: 100%;
-  padding: 20px;
+  
+  
+  display: table-row;
+  height: 10px;
+  padding: 50px;
 }
 
 .quick-create-event {
+  
+  
+  
   width: 75%;
   border-right: 1px solid #ccc;
 }
 .quick-create-event button {
+
   width: 33.33333%;
 }
 
@@ -107,19 +122,26 @@ button {
 }
 
 .choose-file {
-  position: relative;
+  position:relative;
   width: 50%;
   float: right;
-  margin-bottom: 20px;
+  margin-bottom: 85px;
+  margin-left: 500px;
+  margin-top: -35px; 
+
 }
 .choose-file input {
-  width: 100%;
-  padding-right: 50px;
+  position: absolute;
+  right: 45;
+  width: 80.3%;
+  
+  
+
 }
 .choose-file button {
   position: absolute;
   top: 0;
-  right: 0;
+  right: 10;
   width: 35px;
   height: 35px;
   padding: 0;
